--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -82,6 +82,7 @@
     <declare-styleable name="BootstrapProgressBar">
         <attr name="striped" format="boolean"/>
         <attr name="animated" format="boolean"/>
+        <attr name="roundedCorners"/>
         <attr name="progress" format="integer"/>
         <attr name="bootstrapBrand"/>
     </declare-styleable>
