--- a/sample/src/main/res/layout/example_bprogress.xml
+++ b/sample/src/main/res/layout/example_bprogress.xml
@@ -25,8 +25,8 @@
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
             android:id="@+id/example_progress_default"
             style="@style/progress_example"
-            app:progress="25"
             app:bootstrapBrand="success"
+            app:progress="25"
             />
     </LinearLayout>
 
@@ -45,8 +45,8 @@
             android:id="@+id/example_progress_animated"
             style="@style/progress_example"
             app:animated="true"
-            app:progress="40"
             app:bootstrapBrand="primary"
+            app:progress="40"
             />
     </LinearLayout>
 
@@ -64,9 +64,9 @@
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
             android:id="@+id/example_progress_striped"
             style="@style/progress_example"
+            app:bootstrapBrand="info"
             app:progress="60"
             app:striped="true"
-            app:bootstrapBrand="info"
             />
     </LinearLayout>
 
@@ -85,36 +85,49 @@
             android:id="@+id/example_progress_striped_animated"
             style="@style/progress_example"
             app:animated="true"
+            app:bootstrapBrand="warning"
             app:progress="78"
             app:striped="true"
-            app:bootstrapBrand="warning"
             />
     </LinearLayout>
 
     <LinearLayout
         style="@style/progress_weight_container">
 
-        <Button
-            android:id="@+id/example_progress_change_type_btn"
-            style="@style/description_label"
+        <LinearLayout
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Type"
-            />
+            android:orientation="vertical"
+            >
 
-        <Button
-            android:id="@+id/example_progress_change_color_btn"
-            style="@style/description_label"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:text="Color"
-            />
+            <Button
+                android:id="@+id/example_progress_change_type_btn"
+                style="@style/description_label"
+                android:layout_width="wrap_content"
+                android:text="Type"
+                />
+
+            <Button
+                android:id="@+id/example_progress_change_color_btn"
+                style="@style/description_label"
+                android:layout_width="wrap_content"
+                android:text="Color"
+                />
+
+            <Button
+                android:id="@+id/example_progress_change_rounded_btn"
+                style="@style/description_label"
+                android:layout_width="wrap_content"
+                android:text="Round"
+                />
+        </LinearLayout>
 
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
             android:id="@+id/example_progress_change"
             style="@style/progress_example"
-            app:progress="75"
             app:bootstrapBrand="danger"
+            app:progress="75"
             />
     </LinearLayout>
 
