update font api, support using custom fonts in markdown

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -52,7 +52,7 @@
     <declare-styleable name="AwesomeTextView">
         <attr name="bootstrapText" format="string"/>
         <attr name="bootstrapBrand"/>
-        <attr name="faIcon"/>
+        <attr name="fontAwesomeIcon"/>
     </declare-styleable>
 
     <declare-styleable name="BootstrapLabel">
