--- a/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
+++ b/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
@@ -3,6 +3,7 @@
 <LinearLayout
     style="@style/example_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <!-- Default Buttons Square -->
@@ -26,7 +27,15 @@
                 android:id="@+id/bbutton_example_corners"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Corners"
+                android:text="Empty"
+                />
+
+
+            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:bct_image="@drawable/author"
+                android:text="Author"
                 />
         </LinearLayout>
 
