--- a/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
+++ b/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
@@ -1,42 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    style="@style/example_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    style="@style/example_container">
 
     <!-- Default Buttons Square -->
     <TextView
         style="@style/description_label"
-        android:text="Interactive"
-        />
+        android:text="Interactive" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                 android:id="@+id/bbutton_example_corners"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Empty"
-                />
+                android:text="Empty" />
 
 
             <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:bct_image="@drawable/author"
-                android:text="Author"
-                />
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                android:src="@drawable/author"
+                android:text="Author" />
         </LinearLayout>
 
     </HorizontalScrollView>
