--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="default_padding">16dp</dimen>
     <dimen name="micro_padding">4dp</dimen>
+    <dimen name="default_circle_size">300dp</dimen>
 </resources>
