add full data for typicon set

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -54,6 +54,7 @@
         <attr name="bootstrapText" format="string"/>
         <attr name="bootstrapBrand"/>
         <attr name="fontAwesomeIcon"/>
+        <attr name="typicon"/>
     </declare-styleable>
 
     <declare-styleable name="BootstrapLabel">
